fix: update spacing

--- a/app/javascript/pages/form/components/AlternateContactType.scss
+++ b/app/javascript/pages/form/components/AlternateContactType.scss
@@ -5,5 +5,5 @@
 }
 
 .field {
-  margin-bottom: var(--seeds-spacer-label);
+  margin-bottom: 0;
 }
